Merged revisions 9922,10106-10107,10233,10235,10271,10289,10323,10327,10338-10340,10348-10350,10358-10361 via svnmerge from https://svn.codehaus.org/mule/branches/mule-2.x-jdk5
........
  r9922 | dirk.olmes | 2007-11-28 14:35:41 +0100 (Wed, 28 Nov 2007) | 2 lines
  
  move all modules declarations into the appropriate profiles
........
  r10106 | holger | 2007-12-17 15:21:31 +0100 (Mon, 17 Dec 2007) | 1 line
  
  delete messy copy
........
  r10107 | holger | 2007-12-17 15:22:09 +0100 (Mon, 17 Dec 2007) | 1 line
  
  more svn cleanup: this was not svnmerged correctly either
........
  r10233 | dirk.olmes | 2008-01-06 19:59:10 +0100 (Sun, 06 Jan 2008) | 2 lines
  
  simple tests with profiles and different JDKs
........
  r10235 | dirk.olmes | 2008-01-06 20:32:11 +0100 (Sun, 06 Jan 2008) | 2 lines
  
  added cxf transport to the jdk15 profile
........
  r10271 | dirk.olmes | 2008-01-10 09:29:08 +0100 (Thu, 10 Jan 2008) | 2 lines
  
  minor progress
........
  r10289 | dirk.olmes | 2008-01-12 07:13:27 +0100 (Sat, 12 Jan 2008) | 2 lines
  
  testing a single pass build with multiple JDKs. This is no good :-(
........
  r10323 | dirk.olmes | 2008-01-15 12:27:18 +0100 (Tue, 15 Jan 2008) | 2 lines
  
  make sure the enforcer and the compiler plugins don't get in the way while building on JDK1.5
........
  r10327 | dirk.olmes | 2008-01-15 15:48:17 +0100 (Tue, 15 Jan 2008) | 2 lines
  
  building everyting in a single pass using JDK 1.5 works
........
  r10338 | holger | 2008-01-16 12:33:57 +0100 (Wed, 16 Jan 2008) | 1 line
  
  MULE-2903: silent Class literal initializer
........
  r10339 | dirk.olmes | 2008-01-16 12:48:15 +0100 (Wed, 16 Jan 2008) | 1 line
  
  MULE-2903 (Building with JDK 1.5 does not register notification types): properly initialize the class before using it fixes this bug.
........
  r10340 | holger | 2008-01-16 13:00:25 +0100 (Wed, 16 Jan 2008) | 1 line
  
  explain test failure, reference proper schema URI in jaxp-api
........
  r10348 | dirk.olmes | 